cluster/production/default/overseerr/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: default
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
      - name: overseerr
        resources:
          limits:
            cpu: "2000m"
          requests:
            cpu: "500m"
        image: lscr.io/linuxserver/overseerr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /config
          name: appdata
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: overseerr-pvc
      - name: localtime
        hostPath:
          path: /etc/localtime
