cluster/production/default/overseerr/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`seer.dcunha.io`)
    kind: Rule
    services:
    - name: overseerr-svc
      port: 5055
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
